--- a/package.json
+++ b/package.json
@@ -1,12 +1,33 @@
 {
   "name": "typescript-kata-user-messages",
   "version": "1.0.0",
-  "description": "",
+  "description": "Use the power of TypeScript to implement type-safe messages formatted in at least two languages. Here are examples of some messages:",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "check:typescript": "tsc --noEmit",
+    "check:prettier": "prettier --check **/*.[jt]s",
+    "check": "npm run check:prettier && npm run check:typescript"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mastoj/typescript-kata-user-messages.git"
+  },
+  "bugs": {
+    "url": "https://github.com/mastoj/typescript-kata-user-messages/issues"
+  },
+  "homepage": "https://github.com/mastoj/typescript-kata-user-messages#readme",
+  "devDependencies": {
+    "@types/jest": "^29.2.4",
+    "jest": "^29.3.1",
+    "prettier": "^2.8.0",
+    "ts-jest": "^29.0.3",
+    "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "date-fns": "^2.29.3"
+  }
 }
